# postmaster

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: audit.yaml  build.yaml  general.yaml
migrations/: 20240210180200_make_subscription_status_not_null.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
