[package]
name = "postmaster"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "postmaster"

[dependencies]
actix-web = "4.4.1"
chrono = "0.4.33"
config = "0.13.4"
log = "0.4.20"
reqwest = "0.11.23"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
  "macros",
  "chrono",
  "postgres",
  "uuid",
  "migrate",
  "runtime-tokio-rustls",
] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["registry", "env-filter"]}
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
once_cell = "1.19.0"
reqwest = "0.11.23"
